<resources>
    <string name="kde_connect">KDE Connect</string>
    <string name="manifest_label_share">Send to Device</string>
    <string name="foreground_notification_no_devices">Not connected to any device</string>
    <string name="foreground_notification_devices">Connected to: %s</string>
    <string name="foreground_notification_send_clipboard">Send Clipboard</string>
    <string name="pref_plugin_telephony">Telephony notifier</string>
    <string name="pref_plugin_telephony_desc">Send notifications for incoming calls</string>
    <string name="pref_plugin_battery">Battery report</string>
    <string name="pref_plugin_battery_desc">Periodically report battery status</string>
    <string name="pref_plugin_connectivity_report">Connectivity report</string>
    <string name="pref_plugin_connectivity_report_desc">Report network signal strength and status</string>
    <string name="pref_plugin_digitizer">Drawing tablet</string>
    <string name="pref_plugin_digitizer_desc">Use your device as a pressure sensitive drawing tablet</string>
    <string name="pref_plugin_sftp">Filesystem access</string>
    <string name="pref_plugin_sftp_desc">Allows to browse this device\'s filesystem remotely</string>
    <string name="pref_plugin_clipboard">Clipboard sync</string>
    <string name="pref_plugin_clipboard_desc">Share the clipboard content</string>
    <string name="pref_plugin_clipboard_sent">Clipboard Sent</string>
    <string name="pref_plugin_mousepad">Remote input</string>
    <string name="pref_plugin_mousepad_desc_nontv">Use your phone or tablet as a touchpad and keyboard</string>
    <string name="pref_plugin_mousepad_desc_tv">Use your phone or tablet as a TV remote</string>
    <string name="pref_plugin_presenter">Presentation remote</string>
    <string name="pref_plugin_presenter_desc">Use your device to change slides in a presentation</string>
    <string name="pref_plugin_remotekeyboard">Receive remote keypresses</string>
    <string name="pref_plugin_remotekeyboard_desc">Receive keypress events from remote devices</string>
    <string name="pref_plugin_mpris">Multimedia controls</string>
    <string name="pref_plugin_mpris_desc">Provides a remote control for your media player</string>
    <string name="pref_plugin_runcommand">Run Command</string>
    <string name="pref_plugin_runcommand_desc">Trigger remote commands from your phone or tablet</string>
    <string name="pref_plugin_contacts">Contacts Synchronizer</string>
    <string name="pref_plugin_contacts_desc">Allow synchronizing the device\'s contacts book</string>
    <string name="pref_plugin_ping">Ping</string>
    <string name="pref_plugin_ping_desc">Send and receive pings</string>
    <string name="pref_plugin_notifications">Notification sync</string>
    <string name="pref_plugin_notifications_desc">Access your notifications from other devices</string>
    <string name="pref_plugin_receive_notifications">Receive notifications</string>
    <string name="pref_plugin_receive_notifications_desc">Receive notifications from the other device and display them on Android</string>
    <string name="pref_plugin_sharereceiver">Share and receive</string>
    <string name="pref_plugin_sharereceiver_desc">Share files and URLs between devices</string>
    <string name="device_list_empty">No devices</string>
    <string name="ok">OK</string>
    <string name="sad_ok">OK :(</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open settings</string>
    <string name="no_permissions">You need to grant permission to access notifications</string>
    <string name="no_permission_mprisreceiver">To be able to control your media players you need to grant access to the notifications</string>
    <string name="no_permissions_remotekeyboard">To receive keypresses you need to activate the KDE Connect Remote Keyboard</string>
    <string name="send_ping">Send ping</string>
    <string name="open_mpris_controls">Multimedia control</string>
    <string name="remotekeyboard_editing_only" translatable="false">remotekeyboard_editing_only</string>
    <string name="remotekeyboard_editing_only_title" translatable="true">Handle remote keys only when editing</string>
    <string name="remotekeyboard_not_connected" translatable="true">There is no active remote keyboard connection, establish one in kdeconnect</string>
    <string name="remotekeyboard_connected" translatable="true">Remote keyboard connection is active</string>
    <string name="remotekeyboard_multiple_connections" translatable="true">There is more than one remote keyboard connection, select the device to configure</string>
    <string name="open_mousepad">Remote input</string>
    <string name="open_mousepad_tv">TV remote</string>
    <string name="mousepad_info">Move a finger on the screen to move the mouse cursor. Tap for a click, and use two/three fingers for right and middle buttons. Use 2 fingers to scroll. Use a long press to drag\'n drop. Gyro mouse functionality can be enabled from plugin preferences. Mouse input and voice input modes can be configured in plugin settings.</string>
    <string name="mousepad_info_no_gestures">Move a finger on the screen to move the mouse cursor, tap for a click.</string>
    <string name="mousepad_info_mouse_disabled">Mouse Disabled</string>
    <string name="mousepad_keyboard_input_not_supported">Keyboard input not supported by the paired device</string>
    <string name="mousepad_single_tap_settings_title">Set one finger tap action</string>
    <string name="mousepad_double_tap_settings_title">Set two finger tap action</string>
    <string name="mousepad_triple_tap_settings_title">Set three finger tap action</string>
    <string name="mousepad_sensitivity_settings_title">Set touchpad sensitivity</string>
    <string name="mousepad_mouse_buttons_title">Show mouse buttons</string>
    <string name="mousepad_acceleration_profile_settings_title">Set pointer acceleration</string>
    <string name="mousepad_single_tap_key" translatable="false">mousepad_single_tap_key</string>
    <string name="mousepad_double_tap_key" translatable="false">mousepad_double_tap_key</string>
    <string name="mousepad_triple_tap_key" translatable="false">mousepad_triple_tap_key</string>
    <string name="mousepad_sensitivity_key" translatable="false">mousepad_sensitivity_key</string>
    <string name="mousepad_acceleration_profile_key" translatable="false">mousepad_acceleration_profile_key</string>
    <string name="mousepad_scroll_direction_title">Reverse Scrolling Direction</string>
    <string name="mousepad_scroll_direction" translatable="false">mousepad_scroll_direction</string>
    <string name="mousepad_scroll_sensitivity" translatable="false">mousepad_scroll_sensitivity</string>
    <string name="mousepad_scroll_sensitivity_title">Scroll sensitivity</string>
    <string name="gyro_mouse_enabled" translatable="false">gyro_mouse_enabled</string>
    <string name="mousepad_mouse_buttons_enabled_pref" translatable="false">mouse_buttons_enabled</string>
    <string name="mousepad_doubletap_drag_enabled_pref" translatable="false">doubletap_drag_enabled</string>
    <string name="gyro_mouse_enabled_title">Enable gyroscope mouse</string>
    <string name="gyro_mouse_sensitivity_title">Gyroscope sensitivity</string>
    <string name="gyro_mouse_sensitivity" translatable="false">gyro_mouse_sensitivity</string>
    <string name="mousepad_mouse_input_disabled" translatable="false">mousepad_mouse_input_disabled</string>
    <string name="mousepad_mouse_input_disabled_title">Disable mouse input</string>
    <string name="mousepad_mouse_input_disabled_summary">When enabled, only keyboard input will be sent</string>
    <string name="mousepad_voice_input_mode" translatable="false">mousepad_voice_input_mode</string>
    <string name="mousepad_voice_input_mode_title">Show voice input button</string>
    <string name="mousepad_voice_input_mode_summary">Display a large voice input button for easy access</string>
    <string name="mousepad_voice_input_title">Voice Input</string>
    <string name="mousepad_enter_key">Enter</string>
    <string name="mousepad_delete_last_input">Delete Last</string>
    <string name="bigscreen_hide_mouse_input">Hide mouse and keyboard remote input button</string>
    <string name="bigscreen_show_home_title">Show Home button</string>
    <string name="bigscreen_show_back_title">Show Back button</string>
    <string-array name="mousepad_tap_entries">
        <item>Left click</item>
        <item>Right click</item>
        <item>Middle click</item>
        <item>Nothing</item>
    </string-array>
    <string name="mousepad_default_single" translatable="false">left</string>
    <string name="mousepad_default_double" translatable="false">right</string>
    <string name="mousepad_default_triple" translatable="false">middle</string>
    <string name="mousepad_default_sensitivity" translatable="false">default</string>
    <string name="mousepad_default_acceleration_profile" translatable="false">medium</string>
    <string-array name="mousepad_tap_values" translatable="false">
        <item>left</item>
        <item>right</item>
        <item>middle</item>
        <item>none</item>
    </string-array>
    <string name="device_menu_plugins">Plugin settings</string>
    <string name="right_click">Send Right Click</string>
    <string name="middle_click">Send Middle Click</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="device_not_paired">Device not paired</string>
    <string name="request_pairing">Request pairing</string>
    <string name="pairing_accept">Accept</string>
    <string name="pairing_reject">Reject</string>
    <string name="mpris_play">Play</string>
    <string name="mpris_previous">Previous</string>
    <string name="mpris_rew">Rewind</string>
    <string name="mpris_ff">Fast-forward</string>
    <string name="mpris_next">Next</string>
    <string name="mpris_volume">Volume</string>
    <string name="mpris_time_settings_title">Forward/rewind buttons</string>
    <string name="mpris_time_settings_summary">Adjust the time to fast forward/rewind when pressed</string>
    <string name="mpris_time_key" translatable="false">mpris_interval_time</string>
    <string name="mpris_time_default" translatable="false">10000000</string>
    <string name="mpris_notification_settings_title">Show media control notification</string>
    <string name="mpris_notification_settings_summary">Allow controlling your media players without opening KDE Connect</string>
    <string name="mpris_notification_key" translatable="false">mpris_notification_enabled</string>
    <string name="share_notification_preference">Noisy notifications</string>
    <string name="share_notification_preference_summary">Vibrate and play a sound when receiving a file</string>
    <string name="share_destination_customize">Customize destination directory</string>
    <string name="share_destination_customize_summary_disabled">Received files will appear in Downloads</string>
    <string name="share_destination_customize_summary_enabled">Files will be stored in the directory below</string>
    <string name="share_destination_folder_preference">Destination directory</string>
    <string name="use_digitizer">Use as drawing tablet</string>
    <string name="presenter_lock_tip">You can lock your device and use the volume keys to go to the previous/next slide</string>
    <string name="bigscreen_home">Home</string>
    <string name="bigscreen_up">Up</string>
    <string name="bigscreen_left">Left</string>
    <string name="bigscreen_select">Select</string>
    <string name="bigscreen_right">Right</string>
    <string name="bigscreen_down">Down</string>
    <string name="bigscreen_mic">Mic</string>
  <string name="open_compose_send">Compose text</string>
</resources>