<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2023 Albert Vaca Cintora <albertvaka@gmail.com>

SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kdeconnect="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_open_digitizer"
        android:icon="@drawable/ic_draw_24dp"
        android:title="@string/use_digitizer"
        kdeconnect:iconTint="?colorOnBackground"
        kdeconnect:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_show_keyboard"
        android:icon="@drawable/ic_action_keyboard_24dp"
        android:title="@string/show_keyboard"
        kdeconnect:iconTint="?colorOnBackground"
        kdeconnect:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_compose_send"
        android:icon="@drawable/ic_edit_note_24dp"
        android:title="@string/open_compose_send"
        kdeconnect:iconTint="?colorOnBackground"
        kdeconnect:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_mousepad_settings"
        android:title="@string/device_menu_plugins"
        android:icon="@drawable/ic_settings_24dp"
        kdeconnect:iconTint="?colorOnBackground"
        kdeconnect:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_right_click"
        android:title="@string/right_click"
        kdeconnect:showAsAction="never" />

    <item
        android:id="@+id/menu_middle_click"
        android:title="@string/middle_click"
        kdeconnect:showAsAction="never" />

</menu>
