<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ProgressBar
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pair_progress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/device_not_paired"
        android:id="@+id/pair_message"
        android:layout_gravity="left|center_vertical"
    />

    <Button
        android:id="@+id/pair_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_pairing"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/pair_request"
        android:layout_gravity="center">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pairing_accept"
            android:layout_weight="1"
        />

        <Button
            android:id="@+id/reject_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pairing_reject"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
