<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.kde.kdeconnect.Plugins.BigscreenPlugin.BigscreenActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.kde.kdeconnect.UserInterface.Utils.RoundedConstraintLayout
        android:id="@+id/rConstraintLayout"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"

        app:layout_constraintBottom_toTopOf="@+id/rLinearLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/disabled_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/up_button"
                android:contentDescription="@string/bigscreen_up"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:theme="@style/TransparentButton"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <ImageButton
                android:id="@+id/left_button"
                android:contentDescription="@string/bigscreen_left"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                android:theme="@style/TransparentButton"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <ImageButton
                android:id="@+id/select_button"
                style="@style/CircleButton"
                android:contentDescription="@string/bigscreen_select"
                app:layout_column="1"
                app:layout_columnWeight="2"
                app:layout_row="1"
                app:layout_rowWeight="2" />

            <ImageButton
                android:id="@+id/right_button"
                android:contentDescription="@string/bigscreen_right"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:theme="@style/TransparentButton"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <ImageButton
                android:id="@+id/down_button"
                android:contentDescription="@string/bigscreen_down"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:theme="@style/TransparentButton"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="2"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

    </org.kde.kdeconnect.UserInterface.Utils.RoundedConstraintLayout>

    <LinearLayout
        android:id="@+id/rLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"

        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rConstraintLayout">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/bigscreen_home"
            android:src="@drawable/ic_home_black_24dp"
            android:theme="@style/DisableableButton"/>

        <ImageButton
            android:id="@+id/mic_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/bigscreen_mic"
            android:src="@drawable/ic_mic_black"
            android:theme="@style/DisableableButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>