<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pairing_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:visibility="gone"
    tools:visibility="visible">

    <ProgressBar
        android:id="@+id/pair_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pair_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:text="@string/device_not_paired"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pair_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawableStart="@drawable/ic_key"
        android:layout_marginBottom="8dip"
        android:visibility="gone"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/pair_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/request_pairing"
        android:textColor="@android:color/white" />


    <LinearLayout
        android:id="@+id/pair_request_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/pairing_accept"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/reject_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/pairing_reject"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>