<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mpris_control_view"
    android:gravity="center"
    android:paddingLeft="60dip"
    android:paddingTop="5dip"
    android:paddingRight="60dip"
    android:paddingBottom="5dip">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_spinner"
        android:layout_gravity="center"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/now_playing_textview"
        android:singleLine="true"
        android:gravity="center"
        android:padding="8dip"
        android:layout_gravity="center"
    />

    <org.kde.kdeconnect.UserInterface.MaxWidthImageButton
        android:layout_width="fill_parent"
        android:layout_height="75dip"
        app:maxWidth="300dip"
        android:id="@+id/play_button"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/mpris_play"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:clickable="false"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_gravity="center"
    >

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/prev_button"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/mpris_previous"
            android:layout_weight="0.25"
        />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/rew_button"
            android:src="@android:drawable/ic_media_rew"
            android:contentDescription="@string/mpris_rew"
            android:layout_weight="0.25"
        />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ff_button"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/mpris_ff"
            android:layout_weight="0.25"
        />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/next_button"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/mpris_next"
            android:layout_weight="0.25"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:id="@+id/volume_layout"
            android:layout_gravity="center">

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:maxWidth="30dip"
            android:layout_marginRight="10dip"
            android:id="@+id/imageView"
            android:layout_weight="0"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="@string/mpris_volume"
            android:src="@drawable/ic_volume"
        />


        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volume_seek"
            android:layout_weight="1"
            android:max="100"
            android:layout_gravity="center"
        />

    </LinearLayout>

    <!--
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pause_button"
                android:src="@android:drawable/ic_media_pause"
                android:layout_gravity="center"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pause_button"
                android:src="@android:drawable/ic_media_stop"
                android:layout_gravity="center"/>
    -->
</LinearLayout>
