<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mpris_control_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/mpris_rew"
            android:src="@drawable/ic_previous_black"
            android:theme="@style/DisableableButton" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/mpris_ff"
            android:src="@drawable/ic_next_black"
            android:theme="@style/DisableableButton" />

    </LinearLayout>

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:padding="12dip"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/presenter_lock_tip" />

</LinearLayout>
